--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,6 +1,35 @@
-{% extends "layout.html" %}
-{% block content %}
-    <div>
-
+{% extends "layout.html" %} {% block content %}
+<div class="content-section">
+  <form method="POST" action="">
+    {{form.hidden.tag()}}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Join Today</legend>
+      <div class="form-group">
+        {{ form.username.label(class="form-control-label") }} {{
+        form.username.username(class="form-control form-control-lg") }}
+      </div>
+      <div class="form-group">
+        {{ form.email.label(class="form-control-label") }} {{
+        form.email.username(class="form-control form-control-lg") }}
+      </div>
+      <div class="form-group">
+        {{ form.password.label(class="form-control-label") }} {{
+        form.password.username(class="form-control form-control-lg") }}
+      </div>
+      <div class="form-group">
+        {{ form.confirm_password.label(class="form-control-label") }} {{
+        form.confirm_password.username(class="form-control form-control-lg") }}
+      </div>
+    </fieldset>
+    <div class="form-group">
+      {{ form.submit(class="btn btn-outline-info") }}
     </div>
+  </form>
+  <div class="border-top pt-3">
+    <small class="text-muted">
+      Already Have An Account?
+      <a href="{{ url_for('login')}}" class="ml-2">Sign In</a>
+    </small>
+  </div>
+</div>
 {% endblock content %}
