--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,15 +38,15 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link align-middle px-0">
+                <a href="{{ url_for('login')}}" class="nav-link align-middle px-0">
                   <i class="fs-4 bi-house"></i>
-                  <span class="ms-1 d-none d-sm-inline">Dashboard</span>
+                  <span class="ms-1 d-none d-sm-inline">Login</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link align-middle px-0">
+                <a href="{{ url_for('signup')}}" class="nav-link align-middle px-0">
                   <i class="fs-4 bi-house"></i>
-                  <span class="ms-1 d-none d-sm-inline">Dashboard</span>
+                  <span class="ms-1 d-none d-sm-inline">Signup</span>
                 </a>
               </li>
             </ul>
