--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
             class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100"
           >
             <a
-              href="{{ usl_for('dashboard')}}"
+              href="{{ url_for('home')}}"
               class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none"
             >
               <span class="fs-5 d-none d-sm-inline">FindMyClass</span>
@@ -44,7 +44,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{{ url_for('signup')}}" class="nav-link align-middle px-0">
+                <a href="{{ url_for('login')}}" class="nav-link align-middle px-0">
                   <i class="fs-4 bi-house"></i>
                   <span class="ms-1 d-none d-sm-inline">Signup</span>
                 </a>
@@ -92,6 +92,5 @@
 
       {% endfor %} {% endif%}{% endwith %}{% endblock %}
     </div>
-    <div class="container">{% block content %} {% endblock %}</div>
   </body>
 </html>
