--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -77,7 +77,8 @@
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                <li>
+                  <a class="dropdown-item" href="{{url_for('logout')}}">Sign out</a></li>
               </ul>
             </div>
           </div>
