New features to login/signup

--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -73,7 +73,7 @@
                 aria-labelledby="dropdownUser1"
               >
                 <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><a class="dropdown-item" href="{{url_for('account')}}">Profile</a></li>
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
